<resources>
    <string name="app_name">Hosp</string>
    <string name="hosiptal_system">Hosiptal System</string>
    <string name="get_started">Get Started</string>
    <string name="prototype_map">Prototype Map</string>
    <string name="doctor">Doctor</string>
    <string name="receptionist">Receptionist</string>
    <string name="nurse">Nurse</string>
    <string name="manger">Manger</string>
    <string name="hr">HR</string>
    <string name="analysis_employee">Analysis Employee</string>

    <string name="welcome_back">Welcome back !</string>
    <string name="to_continue_login_now">To Continue , Login Now</string>
    <string name="phone_number">| Phone Number</string>
    <string name="password">| Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="calls">Calls</string>

    <string name="attendance_leaving">attendance - leaving</string>
    <string name="hosiptal_system2">Hosiptal System</string>
    <string name="Calls">Calls</string>
    <string name="create_call">Create Call</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="send_call">ٍِSend Call</string>
    <string name="back_to_home">Back to home</string>
    <string name="tasks">Tasks</string>
    <string name="registerData">Data</string>
    <string name="tasks_details">Tasks Details</string>
    <string name="reports">Reports</string>
    <string name="create_reourt">Create Reourt</string>
    <string name="report_name">Report Name</string>
    <string name="create_report">Create_Report</string>
    <string name="report_details">Report Details</string>
    <string name="notification">Notification</string>
    <string name="specialist_doctor">Specialist , Doctor</string>


</resources>